--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  /* Cámara detrás, cover */
-  video[playsinline]{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
+  /* Sólo el vídeo de MindAR (cámara) como fondo */
+  #mindar-video{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
     object-fit:cover!important;z-index:0!important;background:#000!important}
-  /* WebGL delante */
   a-scene{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:auto!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:4!important;pointer-events:auto!important}
-  /* UI */
   .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9}
   .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
   .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
-       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.16;transition:opacity .35s}
+       padding:8px 10px;color:#cfe3ff;font:12px/1.35 system-ui;z-index:8;pointer-events:none;opacity:.16;transition:opacity .35s;white-space:pre}
   .dbg:hover{opacity:1}
 </style>
 </head>
@@ -33,11 +31,11 @@
   embedded vr-mode-ui="enabled:false" device-orientation-permission-ui="enabled:true"
   renderer="alpha:true;antialias:true;logarithmicDepthBuffer:true"
   loading-screen="enabled:false"
-  mindar-image="uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;"
+  mindar-image="uiLoading: true; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;"
   style="width:100vw;height:100vh">
 
   <a-assets timeout="60000">
-    <!-- sin src aquí; se asigna por JS -->
+    <!-- vídeo de contenido (no de cámara). Se asigna por JS -->
     <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"></video>
   </a-assets>
 
@@ -52,26 +50,14 @@
 (function(){
   'use strict';
 
-  /* Fallback gUM: si la trasera falla, usa cualquiera disponible */
-  if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia){
-    var _origGUM = navigator.mediaDevices.getUserMedia.bind(navigator.mediaDevices);
-    navigator.mediaDevices.getUserMedia = function(c){
-      return _origGUM(c).catch(function(err){
-        if(err && (err.name==='NotFoundError' || err.name==='OverconstrainedError')){
-          return _origGUM({video:true,audio:false});
-        }
-        throw err;
-      });
-    };
-  }
-
-  /* Helpers */
+  /* ---------- util ---------- */
   var qs = new URLSearchParams(location.search);
-  function log(m){
+  function log(){
+    var msg=[].slice.call(arguments).join(' ');
     var el=document.getElementById('dbg');
-    el.textContent=m+' · '+new Date().toLocaleTimeString();
+    el.textContent=msg+'\n'+new Date().toLocaleTimeString();
     el.style.opacity=.9; setTimeout(function(){el.style.opacity=.16;},1200);
-    if(window.console && console.log) console.log('[AR]',m);
+    if(console && console.log) console.log('[AR]', msg);
   }
   function clamp(v,a,b){ return Math.max(a,Math.min(b,v)); }
   function getRay(){ var r=document.getElementById('mouseRay'); return r && r.components ? r.components.raycaster : null; }
@@ -79,15 +65,11 @@
     el.addEventListener('loaded', function(){
       var mesh = el.getObject3D('mesh'); if(!mesh) return;
       mesh.renderOrder = order;
-      if(mesh.material){
-        mesh.material.depthTest=!!depthTest;
-        mesh.material.depthWrite=!!depthWrite;
-        mesh.material.needsUpdate=true;
-      }
+      if(mesh.material){ mesh.material.depthTest=!!depthTest; mesh.material.depthWrite=!!depthWrite; mesh.material.needsUpdate=true; }
     });
   }
 
-  /* Cargar JSON */
+  /* ---------- cargar cfg ---------- */
   var cfgUrl = qs.get('cfg');
   if(!cfgUrl){ log('Falta ?cfg=URL_DEL_JSON'); return; }
   fetch(cfgUrl, {mode:'cors', cache:'no-store'})
@@ -98,24 +80,15 @@
   function init(CFG){
     var scene = document.getElementById('scene');
 
-    /* Cámara de fondo cover */
-    new MutationObserver(function(){
-      var vids = document.querySelectorAll('video');
-      for(var i=0;i<vids.length;i++){
-        var v=vids[i];
-        if(v.srcObject instanceof MediaStream){
-          Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
-        }
-      }
-    }).observe(document.documentElement,{subtree:true,childList:true});
-
-    /* MindAR */
+    /* MindAR: set conf */
     scene.setAttribute('mindar-image',
-      'imageTargetSrc:'+CFG.target+'; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;');
+      'imageTargetSrc:'+CFG.target+'; uiLoading: true; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;');
 
+    /* dims y helpers para slots */
     var PW=CFG.pw||2481, PH=CFG.ph||3508, H=PH/PW;
     function px2(x,y,w,h){ return {wn:w/PW, hn:h/PW, cx:-0.5+(x+w/2)/PW, cy:H/2-(y+h/2)/PW}; }
 
+    /* root anchor */
     var anchor=document.getElementById('anchor');
     var root=document.createElement('a-entity'); anchor.appendChild(root);
     var cal=(CFG.cal||{dx:0,dy:0,scale:1,rot:0});
@@ -123,14 +96,14 @@
     root.setAttribute('scale', cal.scale+' '+cal.scale+' 1');
     root.setAttribute('rotation', '0 0 '+cal.rot);
 
-    /* Fondo del póster */
+    /* fondo papel */
     var paper=document.createElement('a-plane');
     paper.setAttribute('width',1); paper.setAttribute('height',H);
     paper.setAttribute('position','0 0 -0.02');
     paper.setAttribute('material','shader:flat; color:#ffffff; side:double; transparent:false');
     root.appendChild(paper); setRO(paper, 1, false, false);
 
-    /* Marco animado (glow + runners) */
+    /* marco animado */
     var vslot=CFG.slotVid, u=px2(vslot.x,vslot.y,vslot.w,vslot.h);
     var glow1 = (CFG.colors&&CFG.colors.wave1) ? CFG.colors.wave1 : '#13d77a';
     var glow2 = (CFG.colors&&CFG.colors.wave2) ? CFG.colors.wave2 : '#ffd54a';
@@ -175,7 +148,7 @@
       runner(u.cx+u.wn/2, u.cy-u.hn/2-0.012, u.cx-u.wn/2, u.cy-u.hn/2-0.012, glow2, 300);
     })();
 
-    /* Vídeo centrado (cover) */
+    /* vídeo de contenido */
     var v1=document.getElementById('v1');
     v1.crossOrigin='anonymous'; v1.muted=true; v1.playsInline=true;
     v1.setAttribute('playsinline','true'); v1.setAttribute('webkit-playsinline','true');
@@ -202,7 +175,7 @@
       if(mesh && mesh.material && mesh.material.map) coverFromMap(mesh.material.map);
     });
 
-    /* Overlay: texto + barra musical grande */
+    /* Overlay canvas: texto + barra/audio grande */
     var Cw=2048, Ch=Math.round(Cw*H);
     var canvas=document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
     var ctx=canvas.getContext('2d');
@@ -231,6 +204,7 @@
     var titlePx=fitFontFor(CFG.title||'', titleSlot.w*Cw/PW, titleSlot.h*Ch/PH, 800);
     var artistPx=fitFontFor(CFG.artist||'',artistSlot.w*Cw/PW, artistSlot.h*Ch/PH, 600);
 
+    /* Audio + analyser */
     var btnAudio=document.getElementById('btnAudio');
     var audio=null, acx=null, analyser=null;
     function setupAudio(){
@@ -239,8 +213,7 @@
       try{
         var AC=window.AudioContext||window.webkitAudioContext;
         acx=new AC(); analyser=acx.createAnalyser();
-        analyser.fftSize=256;
-        analyser.smoothingTimeConstant=0.86;
+        analyser.fftSize=256; analyser.smoothingTimeConstant=0.86;
         var src=acx.createMediaElementSource(audio); src.connect(analyser); analyser.connect(acx.destination);
       }catch(e){}
       audio.addEventListener('play', function(){ btnAudio.textContent='⏸ Audio'; });
@@ -249,18 +222,10 @@
     btnAudio.addEventListener('click', function(){
       setupAudio();
       if(acx && acx.state==='suspended'){
-        acx.resume().then(function(){ toggleAudio(); }).catch(function(){});
-      }else{
-        toggleAudio();
-      }
+        acx.resume().then(toggleAudio).catch(function(){});
+      }else toggleAudio();
     });
-    function toggleAudio(){
-      try{
-        if(!audio) return;
-        if(audio.paused){ audio.play().catch(function(){}); }
-        else { audio.pause(); }
-      }catch(e){}
-    }
+    function toggleAudio(){ try{ if(audio.paused){ audio.play().catch(function(){}); } else { audio.pause(); } }catch(e){} }
 
     var BARS=64, waveH=Math.round(60*Cw/2048), gap=Math.round(28*Cw/2048);
     var levels=new Array(BARS).fill(0), peaks=new Array(BARS).fill(0);
@@ -314,17 +279,14 @@
 
         for(var i=0;i<BARS;i++){
           var bandIndex = arr ? Math.min(arr.length-1, 2+i) : 0;
-
-          /* ****** Cálculo de 'raw' SIN paréntesis sobrantes ****** */
           var raw;
           if (arr) {
             raw = arr[bandIndex] / 255;
           } else {
-            var fake = Math.sin((t/420) + (i*0.35));    /* -1..1 */
-            fake = Math.abs(fake);                      /* 0..1  */
-            raw  = 0.25 + 0.75 * fake;                  /* 0.25..1, suave */
+            var fake = Math.sin((t/420) + (i*0.35));
+            fake = Math.abs(fake);
+            raw  = 0.25 + 0.75 * fake;
           }
-          /* ******************************************************* */
 
           levels[i] = Math.max(raw*0.9 + levels[i]*0.1, levels[i]-0.010);
           peaks[i]  = Math.max(peaks[i]-0.0065, levels[i]);
@@ -359,10 +321,9 @@
     }
     requestAnimationFrame(draw);
 
-    /* Corazones con física + drag (todo el póster) */
+    /* corazones (tap para crear, drag + física) */
     var HEART_SVG='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path fill="%23ff3b61" d="M47.5 6c-5 0-8.8 3-15.5 10C25.3 9 21.5 6 16.5 6 9 6 4 11.8 4 19.2 4 33.7 23.1 43.4 32 58c8.9-14.6 28-24.3 28-38.8C60 11.8 55 6 47.5 6z"/></svg>';
-    var hearts=[];
-    var area = { x1:-0.5+0.03, x2:0.5-0.03, y1:-H/2+0.03, y2:H/2-0.03 };
+    var hearts=[], area = { x1:-0.5+0.03, x2:0.5-0.03, y1:-H/2+0.03, y2:H/2-0.03 };
 
     var dragPlane=document.createElement('a-plane');
     dragPlane.classList.add('dragplane','ui3d');
@@ -384,7 +345,6 @@
       hearts.push({el:h, x:xx, y:yy, vx:(Math.random()-0.5)*0.3, vy:(Math.random()-0.5)*0.3});
       if(hearts.length>28){ var old=hearts.shift(); if(old && old.el) old.el.remove(); }
     }
-
     dragPlane.addEventListener('click', function(){
       var ray=getRay(); var ints=ray && ray.intersections ? ray.intersections : [];
       var hit=null;
@@ -395,7 +355,6 @@
     });
 
     var dragging=null, dragOffset={x:0,y:0}, lastPointer=null, lastTime=0;
-
     function pointerLocal(){
       var ray=getRay(); var ints=ray && ray.intersections ? ray.intersections : [];
       var hit=null;
@@ -405,7 +364,6 @@
       return {x: clamp(p.x, area.x1, area.x2), y: clamp(p.y, area.y1, area.y2)};
     }
     function heartFromEl(el){ for(var i=0;i<hearts.length;i++){ if(hearts[i].el===el) return hearts[i]; } return null; }
-
     scene.addEventListener('pointerdown', function(){
       var ray=getRay(); var ints=ray && ray.intersections ? ray.intersections : [];
       var hit=null;
@@ -420,12 +378,10 @@
     });
     scene.addEventListener('pointerup',   function(){ dragging=null; });
     scene.addEventListener('pointerleave',function(){ dragging=null; });
-
     (function heartsTick(){
       var dt=1/60, g=-0.4, damp=0.60;
       var now=performance.now();
       var p=pointerLocal();
-
       if(dragging && p){
         var nx = clamp(p.x + dragOffset.x, area.x1, area.x2);
         var ny = clamp(p.y + dragOffset.y, area.y1, area.y2);
@@ -437,7 +393,6 @@
         dragging.x = nx; dragging.y = ny;
         lastPointer = p; lastTime = now;
       }
-
       for(var i=0;i<hearts.length;i++){
         var o=hearts[i];
         if(o!==dragging){ o.vy += g*dt; o.x += o.vx*dt; o.y += o.vy*dt; }
@@ -448,11 +403,10 @@
         o.el.setAttribute('position', o.x+' '+o.y+' 0.06');
         o.el.setAttribute('rotation', '0 0 '+(Math.sin(performance.now()/300 + o.x*10)*6));
       }
-
       requestAnimationFrame(heartsTick);
     })();
 
-    /* Botón cámara robusto (promesas, sin await) */
+    /* ---------- Arranque cámara/MindAR robusto + debug ---------- */
     function waitSceneLoaded(){
       return new Promise(function(res){ if(scene.hasLoaded) res(); else scene.addEventListener('loaded', function(){res();}, {once:true}); });
     }
@@ -474,14 +428,52 @@
         Promise.resolve(p).then(res).catch(rej);
       });
     }
+    function findMindARVideo(){ return document.getElementById('mindar-video'); }
+    function styleMindARVideo(){
+      var mv=findMindARVideo();
+      if(!mv) return;
+      mv.setAttribute('playsinline','true');
+      mv.setAttribute('webkit-playsinline','true');
+      mv.muted = true; // iOS
+      // CSS se aplica por id en <style>, esto asegura cover/z-index
+    }
+    function waitMindARVideo(timeoutMs){
+      return new Promise(function(res){
+        var t0=performance.now(), int=setInterval(function(){
+          var v=findMindARVideo();
+          if(v){ clearInterval(int); res(v); }
+          else if(performance.now()-t0>timeoutMs){ clearInterval(int); res(null); }
+        },50);
+      });
+    }
     function bootAR(){
       return navigator.mediaDevices.getUserMedia({video:{facingMode:{ideal:'environment'}}, audio:false})
       .then(function(s){ if(s && s.getTracks){ s.getTracks().forEach(function(t){ t.stop(); }); }})
-      .catch(function(){})
+      .catch(function(e){ log('getUserMedia dio', e && e.name); })
       .then(waitSceneLoaded)
       .then(waitMindARReady)
       .then(startMindAR)
-      .then(function(){ document.getElementById('btnStart').textContent='Cámara lista'; log('Cámara iniciada'); });
+      .then(function(){
+        document.getElementById('btnStart').textContent='Cámara lista';
+        log('Cámara iniciada, esperando video...');
+        return waitMindARVideo(3000);
+      })
+      .then(function(mv){
+        styleMindARVideo();
+        if(mv){
+          var dbg=function(){ log('mindar-video', 'readyState='+mv.readyState, 'paused='+(!!mv.paused), 'size='+mv.videoWidth+'x'+mv.videoHeight); };
+          mv.addEventListener('loadeddata', dbg);
+          mv.addEventListener('playing', dbg);
+          mv.addEventListener('pause', dbg);
+          // si queda pausado, primer gesto lo fuerza
+          if(mv.paused){
+            var kick=function(){ mv.play().catch(function(){}); window.removeEventListener('pointerdown', kick, {passive:true}); };
+            window.addEventListener('pointerdown', kick, {once:true,passive:true});
+          }
+        } else {
+          log('No encontré #mindar-video (pero MindAR está activo)');
+        }
+      });
     }
 
     var btnStart=document.getElementById('btnStart');
@@ -489,21 +481,15 @@
       btnStart.disabled=true;
       bootAR().catch(function(e){
         btnStart.disabled=false;
-        log('No se pudo iniciar cámara ('+(e.name||'')+' '+(e.message||e)+')');
+        log('No se pudo iniciar cámara ('+(e && e.name || '')+' '+(e && e.message || e)+')');
       });
     });
 
-    /* Target events: vídeo + audio */
+    /* eventos de target */
     anchor.addEventListener('targetFound', function(){
       v1.play().catch(function(){});
       setupAudio();
-      if(acx && acx.state==='suspended'){
-        acx.resume().then(function(){
-          if(audio && audio.paused){ audio.play().catch(function(){}); }
-        }).catch(function(){});
-      }else{
-        if(audio && audio.paused){ audio.play().catch(function(){}); }
-      }
+      if(acx && acx.state==='suspended'){ acx.resume().then(function(){ audio && audio.play().catch(function(){}); }); }
       document.getElementById('btnAudio').disabled=false;
       log('Target FOUND');
     });
@@ -511,11 +497,11 @@
       v1.pause(); if(audio) audio.pause(); btnAudio.textContent='▶️ Audio'; log('Target LOST…');
     });
 
-    /* Arranque en primer gesto (iOS) */
+    /* en iOS, primer gesto ayuda a video de cámara si quedó pausado */
     window.addEventListener('pointerdown', function(){
-      var sys=scene.systems['mindar-image-system'];
-      if(!sys || !sys.active) btnStart.click();
-    }, {once:true,passive:true});
+      var mv=findMindARVideo(); if(mv && mv.paused) mv.play().catch(function(){});
+      var sys=scene.systems['mindar-image-system']; if(!sys || !sys.active) btnStart.click();
+    }, {once:false,passive:true});
   }
 })();
 </script>
